internal/xds/translator/testdata/out/xds-ir/http-req-resp-sizes-stats.routes.yaml
- ignorePortInHostMatching: true
  name: listener-enable-req-resp-sizes-stats
  virtualHosts:
  - domains:
    - '*'
    name: listener-enable-req-resp-sizes-stats/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: first-route-dest/backend/0
